--- a/web/html/index.html
+++ b/web/html/index.html
@@ -331,21 +331,18 @@ li button {
         <div id="conPan" class="row" >  
         <div  class="container col-8 align-self-center" > 
           <div class="row" >
-            <input id="hostInp" type="text" placeholder="Host to Connect" class="form-control col-8" value="testssh">
+            <input id="hostInp" type="text" placeholder="Host to Connect" class="form-control col-8" value="4.235.114.136">
             <input id="portInp" type="number" placeholder="Port" class="form-control col-2" value="22">
             <label title="If checked then connection is not proxied through the websocket proxy of ssheasy, but it goes directly to the provided host and port. On the provided addrees a websocket proxy is expected to listen. Useful if you have your own proxy setup (like websockify or something similar)." class="col-2">
               <input id="bypassProxyInp" type="checkbox" /> Bypass proxy
             </label>
           </div>
           <div class="row">
-              <input id="usrInp" type="text" placeholder="User" class="form-control col-5" value="root">
-              <input id="passInp" type="password" placeholder="Password or Passphrase" class="form-control col-5" value="root">
+              <input id="usrInp" type="text" placeholder="User" class="form-control col-5" value="josahm">
+              <input id="passInp" type="password" placeholder="Password or Passphrase" class="form-control col-5" value="Nedjat74180805">
           </div>
           <div class="row">
             <textarea id="pkInp" rows=1 placeholder="Private Key" class="form-control col-7"></textarea>
-            <label class="btn btn-link col-2">
-                Select key file <input id="pkFile" type="file" hidden>
-            </label>
             <button id="conBtn" type="button" class="btn btn-primary col-3" 
               onclick="$('#conBtn').prop('disabled',true);showMsg('Connecting...');initConnection(term.rows, term.cols,$('#hostInp').val(),Number($('#portInp').val()),$('#usrInp').val(),$('#passInp').val(),$('#pkInp').val(), $('#bypassProxyInp').is(':checked'), false);">Connect</button>
           </div>       
